# MediCare

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/api/: consultation_router.py  doctor_router.py  patient_router.py  payment_router.py  prescription_router.py
core/configs/: database.py  pdf_utils.py  settings.py  utils.py
core/model/: BaseModel.py  consultation_model.py  doctor_model.py  patient_model.py  payment_model.py  prescription_model.py
core/repository/: consultation_repository.py  doctor_repository.py  patient_repository.py  payment_repository.py  prescription_repository.py
core/schema/: consultation_schema.py  doctor_schema.py  patient_schema.py  payment_schema.py  prescription_schema.py
core/services/: consultation_service.py  doctor_service.py  patient_service.py  payment_service.py  prescription_service.py
core/templates/: prescription_template.html
core/templates/frontend/: frontend_router.py  index.html
core/templates/frontend/doctor/: consultations.html  layout.html  prescription.html  profile.html  signin.html  signup.html
core/templates/frontend/patient/: consultation_form.html  doctors_list.html  prescriptions.html  profile.html  signin.html  signup.html
